--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       >
         <a class="brand" href="index.html">
           <div class="logo">
-            <img src="/img/logo.png" class="img-fluid" width="54px" alt="SW" />
+            <img src="./img/logo.png" class="img-fluid" width="54px" alt="SW" />
           </div>
           <div>
             <div class="brand-name">Schoolwala</div>
