--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           <div class="footer-brand">
             <div class="footer-logo">
               <img
-                src="/img/logo.png"
+                src="./img/logo.png"
                 class="img-fluid"
                 width="54px"
                 alt="SW"
