--- a/school-tuitions.html
+++ b/school-tuitions.html
@@ -284,7 +284,7 @@
           <div class="footer-brand">
             <div class="footer-logo">
               <img
-                src="/img/logo.png"
+                src="./img/logo.png"
                 class="img-fluid"
                 width="54px"
                 alt="SW"
