--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="nav-menu" id="navMenu">
           <ul>
             <li><a href="school-tuitions.html">School Tuitions</a></li>
-            <li><a href="#how">Courses</a></li>
+            <li><a href="my-class.html">My Class</a></li>
             <li><a href="#faq">FAQ</a></li>
             <li><a class="btn-outline" href="login.html">Login/Reg</a></li>
           </ul>
@@ -518,7 +518,14 @@
 
     <!-- App Promotion Section -->
     <section class="app-section">
-      <div class="container app-flex" style="display: flex; justify-content: space-between; align-items: center;">
+      <div
+        class="container app-flex"
+        style="
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        "
+      >
         <!-- Left Content -->
         <div class="app-content">
           <h2>Learning At Your Pace<br />Anytime, Anywhere</h2>
@@ -527,8 +534,8 @@
             <img
               src="./img/play.png"
               alt="Get it on Google Play"
-              class="play-btn"
-              style="border-radius: 5px;"
+              class="play-btn2"
+              style="border-radius: 5px"
             />
           </a>
         </div>
