--- a/school-tuitions.html
+++ b/school-tuitions.html
@@ -32,7 +32,7 @@
         <div class="nav-menu" id="navMenu">
           <ul>
             <li><a href="school-tuitions.html">School Tuitions</a></li>
-            <li><a href="#how">Courses</a></li>
+            <li><a href="my-class.html">My Class</a></li>
             <li><a href="#faq">FAQ</a></li>
             <li><a class="btn-outline" href="login.html">Login/Reg</a></li>
           </ul>
@@ -273,6 +273,39 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- APP PROMOTION -->
+    <section class="app-section">
+      <div
+        class="container app-flex"
+        style="
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        "
+      >
+        <div class="app-content">
+          <h2>Learning At Your Pace<br />Anytime, Anywhere</h2>
+          <p>Download the SchoolWala App - India's Popular Learning Platform</p>
+          <a href="#" target="_blank">
+            <img
+              src="./img/play.png"
+              alt="Get it on Google Play"
+              class="play-btn2"
+              style="border-radius: 5px"
+            />
+          </a>
+        </div>
+
+        <div class="app-images">
+          <img
+            src="./img/mobile-ad-strip.png"
+            alt="App Screenshot"
+            class="phone phone-front"
+          />
         </div>
       </div>
     </section>
