profile page add1

--- a/index.html
+++ b/index.html
@@ -222,18 +222,18 @@
           <div class="learning-image">
             <img
               id="learningImage"
-              src="./img/handson.png"
+              src="./img/mentor.png"
               alt="Hands-on Learning"
             />
           </div>
 
           <!-- Right Content -->
           <div class="learning-content">
-            <div class="learning-item active" data-img="./img/handson.png">
-              <h3 class="title">School Curriculum</h3>
+            <div class="learning-item active" data-img="./img/mentor.png">
+              <h3 class="title">Personal Mentor Support</h3>
               <p class="desc">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Tempore explicabo eveniet earum iste, architecto sed?
+                One-on-one guidance to track progress and ensure individual
+                growth.
               </p>
             </div>
 
@@ -253,11 +253,11 @@
               </p>
             </div>
 
-            <div class="learning-item" data-img="./img/mentor.png">
-              <h3 class="title">Personal Mentor Support</h3>
+            <div class="learning-item" data-img="./img/handson.png">
+              <h3 class="title">School Curriculum</h3>
               <p class="desc">
-                One-on-one guidance to track progress and ensure individual
-                growth.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Tempore explicabo eveniet earum iste, architecto sed?
               </p>
             </div>
           </div>
