--- a/index.html
+++ b/index.html
@@ -571,19 +571,19 @@
           </div>
 
           <div class="footer-links">
-            <a href="#">About Us</a>
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Contact</a>
+            <a href="privacy.html">Privacy</a>
+            <a href="contact.html">Contact</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="my-class.html">My Class</a>
           </div>
         </div>
 
         <div class="footer-bottom">
           <p>&copy; 2023 Schoolwala. All rights reserved.</p>
           <div class="social-links">
-            <a href="#">FB</a>
-            <a href="#">IG</a>
-            <a href="#">YT</a>
+            <a href="#" style="width: fit-content;"><img src="./img/facebook.png" class="img-fluid" width="40" alt=""></a>
+            <a href="#" style="width: fit-content;"><img src="./img/instagram.png" class="img-fluid" width="40" alt=""></a>
+            <a href="#" style="width: fit-content;"><img src="./img/social.png" class="img-fluid" width="40" alt=""></a>
           </div>
         </div>
       </div>
