--- a/my-chapter-videos.html
+++ b/my-chapter-videos.html
@@ -43,7 +43,32 @@
             <li><a href="school-tuitions.html">School Tuitions</a></li>
             <li><a href="my-class.html">My Class</a></li>
             <li><a href="#faq">FAQ</a></li>
-            <li><a class="btn-outline" href="login.html">Login/Reg</a></li>
+            <li>
+              <a
+                href="student-profile.html"
+                style="
+                  max-width: fit-content;
+                  max-height: fit-content;
+                  margin: 0;
+                  padding: 0;
+                  display: flex;
+                  align-items: center;
+                "
+                ><p
+                  class="btn-outline"
+                  style="
+                    background: url(./img/profile.png);
+                    height: 45px;
+                    width: 45px;
+                    border-radius: 50%;
+                    background-size: cover;
+                    background-position: center;
+                    margin: 0;
+                    padding: 0;
+                  "
+                ></p
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -115,8 +140,19 @@
         <div class="video-grid">
           <!-- Video 1 -->
           <div class="video-card">
-            <div class="video-thumbnail" style="background: url(./img/thumbnail.png); background-size: cover; background-position: center;">
-              <a href="my-video-play.html" class="play-btn" style="text-decoration: none;">
+            <div
+              class="video-thumbnail"
+              style="
+                background: url(./img/thumbnail.png);
+                background-size: cover;
+                background-position: center;
+              "
+            >
+              <a
+                href="my-video-play.html"
+                class="play-btn"
+                style="text-decoration: none"
+              >
                 <i class="fas fa-play"></i>
               </a>
               <div class="video-duration">5:24</div>
@@ -131,7 +167,10 @@
                 <a href="#" class="action-btn btn-notes">
                   <i class="fas fa-download"></i> Notes
                 </a>
-                <a href="my-video-practice-test.html" class="action-btn btn-practice">
+                <a
+                  href="my-video-practice-test.html"
+                  class="action-btn btn-practice"
+                >
                   <i class="fas fa-pencil-alt"></i> Practice
                 </a>
                 <a href="#" class="action-btn btn-completed">
@@ -143,7 +182,14 @@
 
           <!-- Video 2 -->
           <div class="video-card">
-            <div class="video-thumbnail"  style="background: url(./img/thumbnail2.png); background-size: cover; background-position: center;">
+            <div
+              class="video-thumbnail"
+              style="
+                background: url(./img/thumbnail2.png);
+                background-size: cover;
+                background-position: center;
+              "
+            >
               <div class="play-btn">
                 <i class="fas fa-play"></i>
               </div>
@@ -159,7 +205,10 @@
                 <a href="#" class="action-btn btn-notes">
                   <i class="fas fa-download"></i> Notes
                 </a>
-                <a href="my-video-practice-test.html" class="action-btn btn-practice">
+                <a
+                  href="my-video-practice-test.html"
+                  class="action-btn btn-practice"
+                >
                   <i class="fas fa-pencil-alt"></i> Practice
                 </a>
                 <a href="#" class="action-btn btn-completed">
@@ -171,7 +220,14 @@
 
           <!-- Video 3 -->
           <div class="video-card">
-            <div class="video-thumbnail"  style="background: url(./img/thumbnail3.png); background-size: cover; background-position: center;">
+            <div
+              class="video-thumbnail"
+              style="
+                background: url(./img/thumbnail3.png);
+                background-size: cover;
+                background-position: center;
+              "
+            >
               <div class="play-btn">
                 <i class="fas fa-play"></i>
               </div>
@@ -187,7 +243,10 @@
                 <a href="#" class="action-btn btn-notes">
                   <i class="fas fa-download"></i> Notes
                 </a>
-                <a href="my-video-practice-test.html" class="action-btn btn-practice">
+                <a
+                  href="my-video-practice-test.html"
+                  class="action-btn btn-practice"
+                >
                   <i class="fas fa-pencil-alt"></i> Practice
                 </a>
                 <a href="#" class="action-btn btn-completed">
@@ -199,7 +258,14 @@
 
           <!-- Video 4 -->
           <div class="video-card">
-            <div class="video-thumbnail"  style="background: url(./img/thumbnail4.png); background-size: cover; background-position: center;">
+            <div
+              class="video-thumbnail"
+              style="
+                background: url(./img/thumbnail4.png);
+                background-size: cover;
+                background-position: center;
+              "
+            >
               <div class="play-btn">
                 <i class="fas fa-play"></i>
               </div>
@@ -215,7 +281,10 @@
                 <a href="#" class="action-btn btn-notes">
                   <i class="fas fa-download"></i> Notes
                 </a>
-                <a href="my-video-practice-test.html" class="action-btn btn-practice">
+                <a
+                  href="my-video-practice-test.html"
+                  class="action-btn btn-practice"
+                >
                   <i class="fas fa-pencil-alt"></i> Practice
                 </a>
                 <a href="#" class="action-btn btn-completed">
@@ -227,7 +296,14 @@
 
           <!-- Video 5 -->
           <div class="video-card">
-            <div class="video-thumbnail"  style="background: url(./img/thumbnail5.png); background-size: cover; background-position: center;">
+            <div
+              class="video-thumbnail"
+              style="
+                background: url(./img/thumbnail5.png);
+                background-size: cover;
+                background-position: center;
+              "
+            >
               <div class="play-btn">
                 <i class="fas fa-play"></i>
               </div>
@@ -243,7 +319,10 @@
                 <a href="#" class="action-btn btn-notes">
                   <i class="fas fa-download"></i> Notes
                 </a>
-                <a href="my-video-practice-test.html" class="action-btn btn-practice">
+                <a
+                  href="my-video-practice-test.html"
+                  class="action-btn btn-practice"
+                >
                   <i class="fas fa-pencil-alt"></i> Practice
                 </a>
                 <a href="#" class="action-btn btn-completed">
@@ -255,7 +334,14 @@
 
           <!-- Video 6 -->
           <div class="video-card">
-            <div class="video-thumbnail"  style="background: url(./img/thumbnail.png); background-size: cover; background-position: center;">
+            <div
+              class="video-thumbnail"
+              style="
+                background: url(./img/thumbnail.png);
+                background-size: cover;
+                background-position: center;
+              "
+            >
               <div class="play-btn">
                 <i class="fas fa-play"></i>
               </div>
@@ -271,7 +357,10 @@
                 <a href="#" class="action-btn btn-notes">
                   <i class="fas fa-download"></i> Notes
                 </a>
-                <a href="my-video-practice-test.html" class="action-btn btn-practice">
+                <a
+                  href="my-video-practice-test.html"
+                  class="action-btn btn-practice"
+                >
                   <i class="fas fa-pencil-alt"></i> Practice
                 </a>
                 <a href="#" class="action-btn btn-completed">
@@ -280,6 +369,8 @@
               </div>
             </div>
           </div>
+
+          
         </div>
       </div>
 
@@ -354,19 +445,33 @@
           </div>
 
           <div class="footer-links">
-            <a href="#">About Us</a>
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Contact</a>
+            <a href="privacy.html">Privacy</a>
+            <a href="contact.html">Contact</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="my-class.html">My Class</a>
           </div>
         </div>
 
         <div class="footer-bottom">
           <p>&copy; 2023 Schoolwala. All rights reserved.</p>
           <div class="social-links">
-            <a href="#">FB</a>
-            <a href="#">IG</a>
-            <a href="#">YT</a>
+            <a href="#" style="width: fit-content"
+              ><img
+                src="./img/facebook.png"
+                class="img-fluid"
+                width="40"
+                alt=""
+            /></a>
+            <a href="#" style="width: fit-content"
+              ><img
+                src="./img/instagram.png"
+                class="img-fluid"
+                width="40"
+                alt=""
+            /></a>
+            <a href="#" style="width: fit-content"
+              ><img src="./img/social.png" class="img-fluid" width="40" alt=""
+            /></a>
           </div>
         </div>
       </div>
@@ -385,8 +490,6 @@
     <script src="./js/script.js"></script>
 
     <script>
-
-
       // Mark as completed functionality
       const completeButtons = document.querySelectorAll(".btn-completed");
 
