--- a/my-class-content.html
+++ b/my-class-content.html
@@ -43,7 +43,32 @@
             <li><a href="school-tuitions.html">School Tuitions</a></li>
             <li><a href="my-class.html">My Class</a></li>
             <li><a href="#faq">FAQ</a></li>
-            <li><a class="btn-outline" href="login.html">Login/Reg</a></li>
+            <li>
+              <a
+                href="student-profile.html"
+                style="
+                  max-width: fit-content;
+                  max-height: fit-content;
+                  margin: 0;
+                  padding: 0;
+                  display: flex;
+                  align-items: center;
+                "
+                ><p
+                  class="btn-outline"
+                  style="
+                    background: url(./img/profile.png);
+                    height: 45px;
+                    width: 45px;
+                    border-radius: 50%;
+                    background-size: cover;
+                    background-position: center;
+                    margin: 0;
+                    padding: 0;
+                  "
+                ></p
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -153,7 +178,11 @@
                   <i class="fas fa-video"></i> 6 videos
                 </div>
                 <div class="duration"><i class="fas fa-clock"></i> 45 min</div>
-                <a href="my-chapter-videos.html" class="play-btn" style="text-decoration: none;">
+                <a
+                  href="my-chapter-videos.html"
+                  class="play-btn"
+                  style="text-decoration: none"
+                >
                   <i class="fas fa-play"></i>
                 </a>
               </div>
@@ -356,19 +385,33 @@
           </div>
 
           <div class="footer-links">
-            <a href="#">About Us</a>
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Contact</a>
+            <a href="privacy.html">Privacy</a>
+            <a href="contact.html">Contact</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="my-class.html">My Class</a>
           </div>
         </div>
 
         <div class="footer-bottom">
           <p>&copy; 2023 Schoolwala. All rights reserved.</p>
           <div class="social-links">
-            <a href="#">FB</a>
-            <a href="#">IG</a>
-            <a href="#">YT</a>
+            <a href="#" style="width: fit-content"
+              ><img
+                src="./img/facebook.png"
+                class="img-fluid"
+                width="40"
+                alt=""
+            /></a>
+            <a href="#" style="width: fit-content"
+              ><img
+                src="./img/instagram.png"
+                class="img-fluid"
+                width="40"
+                alt=""
+            /></a>
+            <a href="#" style="width: fit-content"
+              ><img src="./img/social.png" class="img-fluid" width="40" alt=""
+            /></a>
           </div>
         </div>
       </div>
