--- a/aboutus.html
+++ b/aboutus.html
@@ -165,57 +165,61 @@
           <p>The magical minds making learning fun</p>
         </div>
 
-        <div class="team-grid">
-          <!-- Team Member 1 -->
-          <div class="team-member">
-            <div class="member-avatar">
-              <i class="fas fa-hat-wizard"></i>
+        <div class="faculty-cards">
+          <div class="faculty-card">
+            <div class="faculty-info">
+              <h3>Vishal Sir</h3>
+              <p>
+                B.Sc Graduate, CTET and HTET qualified with 4+ years of teaching
+                experience.
+              </p>
+              <a href="#">Know More ↗</a>
             </div>
-            <h3 class="member-name">Raj Mehta</h3>
-            <div class="member-role">Chief Learning Wizard</div>
-            <p class="member-bio">
-              Former teacher with 15 years of experience. Believes every math
-              problem is a puzzle waiting to be solved!
-            </p>
+            <div class="faculty-img">
+              <img src="./img/fac.png" alt="Vishal Sir" />
+            </div>
           </div>
 
-          <!-- Team Member 2 -->
-          <div class="team-member">
-            <div class="member-avatar">
-              <i class="fas fa-magic"></i>
+          <div class="faculty-card">
+            <div class="faculty-info">
+              <h3>Vishal Sir</h3>
+              <p>
+                B.Sc Graduate, CTET and HTET qualified with 4+ years of teaching
+                experience.
+              </p>
+              <a href="#">Know More ↗</a>
             </div>
-            <h3 class="member-name">Priya Sharma</h3>
-            <div class="member-role">Science Sorceress</div>
-            <p class="member-bio">
-              Turns complex science concepts into magical experiments. Her
-              potions always produce 'wow' moments!
-            </p>
+            <div class="faculty-img">
+              <img src="./img/fac.png" alt="Vishal Sir" />
+            </div>
           </div>
 
-          <!-- Team Member 3 -->
-          <div class="team-member">
-            <div class="member-avatar">
-              <i class="fas fa-paint-brush"></i>
+          <div class="faculty-card">
+            <div class="faculty-info">
+              <h3>Vishal Sir</h3>
+              <p>
+                B.Sc Graduate, CTET and HTET qualified with 4+ years of teaching
+                experience.
+              </p>
+              <a href="#">Know More ↗</a>
             </div>
-            <h3 class="member-name">Arjun Patel</h3>
-            <div class="member-role">Creative Artificer</div>
-            <p class="member-bio">
-              Brings lessons to life with colorful animations. His doodles have
-              a magical way of explaining tough topics!
-            </p>
+            <div class="faculty-img">
+              <img src="./img/fac.png" alt="Vishal Sir" />
+            </div>
           </div>
 
-          <!-- Team Member 4 -->
-          <div class="team-member">
-            <div class="member-avatar">
-              <i class="fas fa-gamepad"></i>
+          <div class="faculty-card">
+            <div class="faculty-info">
+              <h3>Vishal Sir</h3>
+              <p>
+                B.Sc Graduate, CTET and HTET qualified with 4+ years of teaching
+                experience.
+              </p>
+              <a href="#">Know More ↗</a>
             </div>
-            <h3 class="member-name">Maya Verma</h3>
-            <div class="member-role">Game Enchantress</div>
-            <p class="member-bio">
-              Creates learning games so fun, kids forget they're educational.
-              Her quests make knowledge an adventure!
-            </p>
+            <div class="faculty-img">
+              <img src="./img/fac.png" alt="Vishal Sir" />
+            </div>
           </div>
         </div>
       </div>
@@ -387,7 +391,7 @@
     </div>
 
     <script src="./js/script.js"></script>
-    
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         // Animate stat circles
