--- a/admin/admin-class-faqs.html
+++ b/admin/admin-class-faqs.html
@@ -229,28 +229,22 @@
             </li>
 
             <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
+              <a href="admin-chapters.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-book-open"></i>
                 <div data-i18n="Chapters">Chapters</div>
               </a>
             </li>
 
             <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
+              <a href="admin-videos.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-video"></i>
                 <div data-i18n="Videos">Videos</div>
               </a>
             </li>
 
-            <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-check"></i>
-                <div data-i18n="Practice Test">Practice Test</div>
-              </a>
-            </li>
 
             <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
+              <a href="admin-video-feedbacks.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-like"></i>
                 <div data-i18n="Video Feedbacks">Video Feedbacks</div>
               </a>
@@ -602,6 +596,21 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
+                          >Choose Class</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                          <option value="4">Class 4</option>
+                          <option value="5">Class 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
                           >Question</label
                         >
                         <textarea class="form-control" name="" id="" rows="5">
@@ -654,6 +663,22 @@
                     ></button>
                   </div>
                   <div class="modal-body">
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Choose Class</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                          <option value="4">Class 4</option>
+                          <option value="5">Class 5</option>
+                        </select>
+                      </div>
+                    </div>
+
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
