--- a/admin/admin-subjects.html
+++ b/admin/admin-subjects.html
@@ -207,7 +207,7 @@
               <span class="menu-header-text">Course</span>
             </li>
             <!-- Cards -->
-            <li class="menu-item active">
+            <li class="menu-item">
               <a href="admin-classes.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-collection"></i>
                 <div data-i18n="Classes">Classes</div>
@@ -221,7 +221,7 @@
               </a>
             </li>
 
-            <li class="menu-item">
+            <li class="menu-item active">
               <a href="admin-subjects.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-crown"></i>
                 <div data-i18n="Subjects">Subjects</div>
@@ -399,10 +399,10 @@
                       <div class="col-sm-7">
                         <div class="card-body">
                           <h5 class="card-title text-primary">
-                            List of Classes !
+                            List of Subjects !
                           </h5>
                           <p class="mb-4">
-                            You can <strong>add/ edit/ delete</strong> classes
+                            You can <strong>add/ edit/ delete</strong> subjects
                           </p>
                         </div>
                       </div>
@@ -423,8 +423,8 @@
                             <thead>
                               <tr>
                                 <th>SL</th>
-                                <th>Class Name</th>
-                                <th>Description</th>
+                                <th>Class Names</th>
+                                <th>Subjects</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -434,17 +434,8 @@
                                   <strong>1</strong>
                                 </td>
                                 <td>Class 5</td>
-                                <td>
-                                  <button
-                                    class="btn btn-primary"
-                                    type="button"
-                                    class="btn btn-primary"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#backDropModalDesc"
-                                  >
-                                    Description
-                                  </button>
-                                </td>
+                                <td>Bengali</td>
+
                                 <td>
                                   <button
                                     type="button"
@@ -476,52 +467,7 @@
             </div>
             <!-- / Content -->
 
-            <!-- Desc Modal -->
-            <div
-              class="modal fade"
-              id="backDropModalDesc"
-              data-bs-backdrop="static"
-              tabindex="-1"
-            >
-              <div class="modal-dialog">
-                <form class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="backDropModalTitle">
-                      Class 5 Description
-                    </h5>
-                    <button
-                      type="button"
-                      class="btn-close"
-                      data-bs-dismiss="modal"
-                      aria-label="Close"
-                    ></button>
-                  </div>
-                  <div class="modal-body">
-                    <div class="row">
-                      <div class="col mb-3">
-                        <p>
-                          <strong>Description:</strong>
-                          <br />
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Quisquam, quae?
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button
-                      type="button"
-                      class="btn btn-outline-secondary"
-                      data-bs-dismiss="modal"
-                    >
-                      Close
-                    </button>
-                  </div>
-                </form>
-              </div>
-            </div>
-
-            <!-- Add Class Modal -->
+            <!-- Add Subject Modal -->
             <div
               class="modal fade"
               id="backDropModalAddClass"
@@ -532,7 +478,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Add Class
+                      Add Subject
                     </h5>
                     <button
                       type="button"
@@ -545,24 +491,24 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Name</label
+                          >Choose Class</label
                         >
-                        <input
-                          type="text"
-                          id="nameBackdrop"
-                          class="form-control"
-                          placeholder="Ex:- Class 5"
-                        />
+                        <select name="" id="" class="form-select">
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                          <option value="4">Class 4</option>
+                          <option value="5">Class 5</option>
+                        </select>
                       </div>
                     </div>
 
                     <div class="row g-2">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Description</label
+                          >Subject Name</label
                         >
-                        <textarea class="form-control" name="" id="" rows="5">
-                        </textarea>
+                        <input type="text" class="form-control" />
                       </div>
                     </div>
                   </div>
@@ -580,7 +526,7 @@
               </div>
             </div>
 
-            <!-- Edit Class Modal -->
+            <!-- Edit Subject Modal -->
             <div
               class="modal fade"
               id="backDropModalEditClass"
@@ -591,7 +537,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Edit Class
+                      Edit Subject
                     </h5>
                     <button
                       type="button"
@@ -604,24 +550,24 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Name</label
+                          >Choose Class</label
                         >
-                        <input
-                          type="text"
-                          id="nameBackdrop"
-                          class="form-control"
-                          placeholder="Ex:- Class 5"
-                        />
+                        <select name="" id="" class="form-select">
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                          <option value="4">Class 4</option>
+                          <option value="5">Class 5</option>
+                        </select>
                       </div>
                     </div>
 
                     <div class="row g-2">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Description</label
+                          >Subject Name</label
                         >
-                        <textarea class="form-control" name="" id="" rows="5">
-                        </textarea>
+                        <input type="text" class="form-control" />
                       </div>
                     </div>
                   </div>
@@ -639,7 +585,7 @@
               </div>
             </div>
 
-            <!-- Delete Class Modal -->
+            <!-- Delete Subject Modal -->
             <div
               class="modal fade"
               id="backDropModalDeleteClass"
@@ -650,7 +596,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Delete Class
+                      Delete Subject
                     </h5>
                     <button
                       type="button"
@@ -662,7 +608,7 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <p>Are you sure you want to delete this class?</p>
+                        <p>Are you sure you want to delete this Subject?</p>
                       </div>
                     </div>
                   </div>
