--- a/admin/admin-videos.html
+++ b/admin/admin-videos.html
@@ -207,7 +207,7 @@
               <span class="menu-header-text">Course</span>
             </li>
             <!-- Cards -->
-            <li class="menu-item active">
+            <li class="menu-item">
               <a href="admin-classes.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-collection"></i>
                 <div data-i18n="Classes">Classes</div>
@@ -235,7 +235,7 @@
               </a>
             </li>
 
-            <li class="menu-item">
+            <li class="menu-item active">
               <a href="admin-videos.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-video"></i>
                 <div data-i18n="Videos">Videos</div>
@@ -399,10 +399,10 @@
                       <div class="col-sm-7">
                         <div class="card-body">
                           <h5 class="card-title text-primary">
-                            List of Classes !
+                            List of Videos !
                           </h5>
                           <p class="mb-4">
-                            You can <strong>add/ edit/ delete</strong> classes
+                            You can <strong>add/ edit/ delete</strong> videos
                           </p>
                         </div>
                       </div>
@@ -423,8 +423,12 @@
                             <thead>
                               <tr>
                                 <th>SL</th>
-                                <th>Class Name</th>
-                                <th>Description</th>
+                                <th>Class Names</th>
+                                <th>Subjects</th>
+                                <th>Chapters</th>
+                                <th>Paid/ Free</th>
+                                <th>Videos</th>
+                                <th>Practice Tests</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -434,17 +438,37 @@
                                   <strong>1</strong>
                                 </td>
                                 <td>Class 5</td>
+                                <td>Bengali</td>
+                                <td>Chapter 1</td>
+                                <td>
+                                  <span class="badge bg-label-success"
+                                    >Paid</span
+                                  >
+                                  /
+                                  <span class="badge bg-label-info">Free</span>
+                                </td>
                                 <td>
                                   <button
-                                    class="btn btn-primary"
+                                    type="button"
+                                    class="btn btn-info"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#backDropModalPlayVideo"
+                                  >
+                                    Play
+                                  </button>
+                                </td>
+
+                                <td>
+                                  <button
                                     type="button"
                                     class="btn btn-primary"
                                     data-bs-toggle="modal"
-                                    data-bs-target="#backDropModalDesc"
+                                    data-bs-target="#backDropModalView"
                                   >
-                                    Description
+                                    View
                                   </button>
                                 </td>
+
                                 <td>
                                   <button
                                     type="button"
@@ -476,10 +500,10 @@
             </div>
             <!-- / Content -->
 
-            <!-- Desc Modal -->
+            <!-- Video Modal -->
             <div
               class="modal fade"
-              id="backDropModalDesc"
+              id="backDropModalPlayVideo"
               data-bs-backdrop="static"
               tabindex="-1"
             >
@@ -487,7 +511,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Class 5 Description
+                      Class 5 | Bengali | Chapter 1
                     </h5>
                     <button
                       type="button"
@@ -499,11 +523,17 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <p>
-                          <strong>Description:</strong>
+                        <p style="width: 100%">
+                          <strong>Video Title:</strong>
                           <br />
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Quisquam, quae?
+                          <br />
+                          <iframe
+                            src="https://www.youtube.com/embed/E3oG313_kps?si=mA1vie_IPCPwfeHv"
+                            title="YouTube video player"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                            style="width: 100%; height: 300px"
+                          ></iframe>
                         </p>
                       </div>
                     </div>
@@ -521,18 +551,83 @@
               </div>
             </div>
 
-            <!-- Add Class Modal -->
+            <!-- Practice Test Modal -->
+            <div
+              class="modal fade"
+              id="backDropModalView"
+              data-bs-backdrop="static"
+              tabindex="-1"
+            >
+              <div class="modal-dialog">
+                <form class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="backDropModalTitle">
+                      Practice Test | Class 5 | Bengali | Chapter 1
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <p class="fw-bold">Video Title</p>
+                        <p style="width: 100%">
+                          <strong>1.</strong>
+                          <span
+                            >Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.</span
+                          >
+                          <br />
+                          <span class="mx-3 me-2">A. Lorem</span>
+                          <span class="me-2">B. Lorem</span>
+                          <span class="me-2">C. Lorem</span>
+                          <span class="me-2">D. Lorem</span>
+                        </p>
+
+                        <p style="width: 100%">
+                          <strong>2.</strong>
+                          <span
+                            >Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.</span
+                          >
+                          <br />
+                          <span class="mx-3 me-2">A. Lorem</span>
+                          <span class="me-2">B. Lorem</span>
+                          <span class="me-2">C. Lorem</span>
+                          <span class="me-2">D. Lorem</span>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-outline-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <!-- Add Video Modal -->
             <div
               class="modal fade"
               id="backDropModalAddClass"
               data-bs-backdrop="static"
               tabindex="-1"
             >
-              <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-dialog modal-dialog-centered modal-lg">
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Add Class
+                      Add Video
                     </h5>
                     <button
                       type="button"
@@ -545,24 +640,89 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Name</label
+                          >Choose Class</label
                         >
-                        <input
-                          type="text"
-                          id="nameBackdrop"
-                          class="form-control"
-                          placeholder="Ex:- Class 5"
-                        />
+                        <select name="" id="" class="form-select">
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                          <option value="4">Class 4</option>
+                          <option value="5">Class 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Choose Subject</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="1">Subject 1</option>
+                          <option value="2">Subject 2</option>
+                          <option value="3">Subject 3</option>
+                          <option value="4">Subject 4</option>
+                          <option value="5">Subject 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Choose Chapter</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="1">Chapter 1</option>
+                          <option value="2">Chapter 2</option>
+                          <option value="3">Chapter 3</option>
+                          <option value="4">Chapter 4</option>
+                          <option value="5">Chapter 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Video Type</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="paid">Paid</option>
+                          <option value="free">Free</option>
+                        </select>
                       </div>
                     </div>
 
                     <div class="row g-2">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Description</label
+                          >Video Title</label
                         >
-                        <textarea class="form-control" name="" id="" rows="5">
-                        </textarea>
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Video Link</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Video Description</label
+                        >
+                        <textarea
+                          name=""
+                          id=""
+                          class="form-control"
+                          rows="5"
+                        ></textarea>
                       </div>
                     </div>
                   </div>
@@ -580,18 +740,18 @@
               </div>
             </div>
 
-            <!-- Edit Class Modal -->
+            <!-- Edit Video Modal -->
             <div
               class="modal fade"
               id="backDropModalEditClass"
               data-bs-backdrop="static"
               tabindex="-1"
             >
-              <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-dialog modal-dialog-centered modal-lg">
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Edit Class
+                      Edit Video
                     </h5>
                     <button
                       type="button"
@@ -604,24 +764,89 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Name</label
+                          >Choose Class</label
                         >
-                        <input
-                          type="text"
-                          id="nameBackdrop"
-                          class="form-control"
-                          placeholder="Ex:- Class 5"
-                        />
+                        <select name="" id="" class="form-select">
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                          <option value="4">Class 4</option>
+                          <option value="5">Class 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Choose Subject</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="1">Subject 1</option>
+                          <option value="2">Subject 2</option>
+                          <option value="3">Subject 3</option>
+                          <option value="4">Subject 4</option>
+                          <option value="5">Subject 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Choose Chapter</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="1">Chapter 1</option>
+                          <option value="2">Chapter 2</option>
+                          <option value="3">Chapter 3</option>
+                          <option value="4">Chapter 4</option>
+                          <option value="5">Chapter 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Video Type</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="paid">Paid</option>
+                          <option value="free">Free</option>
+                        </select>
                       </div>
                     </div>
 
                     <div class="row g-2">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Class Description</label
+                          >Video Title</label
                         >
-                        <textarea class="form-control" name="" id="" rows="5">
-                        </textarea>
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Video Link</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Video Description</label
+                        >
+                        <textarea
+                          name=""
+                          id=""
+                          class="form-control"
+                          rows="5"
+                        ></textarea>
                       </div>
                     </div>
                   </div>
@@ -639,7 +864,7 @@
               </div>
             </div>
 
-            <!-- Delete Class Modal -->
+            <!-- Delete Video Modal -->
             <div
               class="modal fade"
               id="backDropModalDeleteClass"
@@ -650,7 +875,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Delete Class
+                      Delete Video
                     </h5>
                     <button
                       type="button"
@@ -662,7 +887,7 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <p>Are you sure you want to delete this class?</p>
+                        <p>Are you sure you want to delete this Video?</p>
                       </div>
                     </div>
                   </div>
